Sort out letter spacing for the computer score so that safari users can see it correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,6 @@ h2 {
     color: navy;
     font-family: 'Gemunu Libre', sans-serif;
     letter-spacing: 0.75px;
-    
 }
 
 #answer-area {
@@ -119,7 +118,7 @@ h2 {
 
 #computer-score-h2 {
     float: left;
-    margin-left: 0px;
+    margin-left: -0px;
 }
 
 #info {
@@ -290,8 +289,9 @@ h2 {
 
 #computer-score-h2 {
     float: left;
-    margin-left: 0px;
+    margin-left: -5px;
     margin-top: 12px;
+    letter-spacing: 0.5px;
 }
 
 #info {
